--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,6 +1,6 @@
 {
     "url": "https://megadogs1990.netlify.app/", 
-    "name": "Bleggs Airdrop",                   
+    "name": "Money Cats 💰",                   
     "iconUrl": "https://megadogs1990.netlify.app/loader.webp",          
     "termsOfUseUrl": "",  
     "privacyPolicyUrl": ""
