--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
-    "url": "https://megadogs1990.netlify.app/", 
+    "url": "https://moneycats2000.netlify.app/", 
     "name": "Money Cats 💰",                   
-    "iconUrl": "https://megadogs1990.netlify.app/loader.webp",          
+    "iconUrl": "https://moneycats2000.netlify.app/loader.webp",          
     "termsOfUseUrl": "",  
     "privacyPolicyUrl": ""
 }
